--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
     "name": "devnote-graphql",
     "version": "1.0.0",
-    "main": "index.js",
     "repository": "git@github.com:1c-team/devnote-graphql.git",
     "author": "tuannm99 <tuannm@foobla.com>",
     "license": "MIT",
-    "type": "module",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "engines": {
+        "node": ">=18.0"
+    },
     "scripts": {
         "compile": "tsc",
-        "start": "npm run compile && node ./dist/index.js"
+        "dev": "ts-node-dev --respawn ./src/index.ts",
+        "start": "npm run compile && nodemon ./dist/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "@apollo/server": "^4.10.4",
-        "graphql": "^16.8.1"
+        "@parcel/watcher": "^2.4.0",
+        "graphql": "^16.8.1",
+        "graphql-tag": "^2.12.6"
     },
     "devDependencies": {
-        "@types/node": "^20.12.8",
-        "typescript": "^5.4.5"
+        "@types/jest": "^29.0.3",
+        "@types/node": "^20.0.0",
+        "concurrently": "^8.2.2",
+        "jest": "^29.0.3",
+        "nodemon": "^3.0.0",
+        "ts-jest": "^29.0.2",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.0.0"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "roots": [
+            "src"
+        ],
+        "globals": {
+            "ts-jest": {
+                "testRegext": "/__tests__/.*.test.ts",
+                "verbose": true
+            }
+        }
     }
 }
